[package]
name = "gigaton"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "4.0.0"
notify = "5.1.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_yaml = "0.9.17"
walkdir = "2.3.2"
zip = "0.6.3"
